# MultiCamRectification

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt
input/: image0.list  image1.list  image2.list  image3.list
src/: LevenbergMarquardt.cpp  LevenbergMarquardt.hpp  MultiRectification.cpp  MultiRectification.hpp  PointCorrespondanceLoader.cpp  PointCorrespondanceLoader.hpp  main.cpp
